--- a/blogpost.html
+++ b/blogpost.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div id="container">
-            <div id="cabecera">
-                Cabecera
+            <div id="cabecera123">
+                Cabecera123
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
