--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera123456">
-                Cabecera123456
+                caveza
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
