--- a/blogpost.html
+++ b/blogpost.html
@@ -9,8 +9,10 @@
                 <p>pie</p>
             </div>
             <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <h1>FACU: Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas
+                ESTO ES DEL FACU!
+                </p>
             </div>
         </div>
     </body>
