--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>German escribió cosas acá pero no las puedo ver porque las borre</p>
             </div>
         </div>
     </body>
