--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
+                <p><img src="./imagenes/logo-nortegas.png" width="350px" align-items="center" text-align="center" alt="Logo de norte gas"></p>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscr&iacute;bete y dale me re gusta!</p>
